# project-smaug

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/RULES/: RULES_BRANCHES.md  RULES_DOCS.md  RULES_ENTITIES.md  RULES_FRONTEND.md  RULES_GIT_WORKFLOW.md  RULES_ISSUES.md  RULES_LAYERS.md  RULES_REPOSITORIES.md  RULES_TESTING.md  RULES_TYPING.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_ticker_analysis.py  (+11 more)
docs/: FINDINGS_INDICATORS.md  PLANO_FASE1.md  ROADMAP.md  preview_fase1_criterios_implementacao.md
frontend/: .env.example  README.md  package-lock.json  package.json  postcss.config.mjs
scripts/: export_reference_inputs.py  ingest_reps.sh
tests/: __init__.py  fakes.py  test_analyze.py  test_brapi_client.py  test_brapi_price.py  test_calculator.py  test_capital.py  test_cli_format.py  test_company_registry.py  test_completeness_report.py  test_composite_price.py  test_cvm_capital.py  test_cvm_source.py  test_doctor.py  test_event_bus.py  test_fallback_price.py  test_indicator_docs_parity.py  test_ingest_use_case.py  test_logging.py  test_market_cap.py  test_market_symbols.py  test_mongo_capital.py  test_mongo_fundamentals.py  test_portfolio.py  test_prune.py  test_reference_fidelity.py  test_repository_mapping.py  test_routed_source.py  test_smoke.py  test_source_selection.py  test_sql_repository_mapping.py  test_taxonomy.py  test_ttm.py  test_yahoo_price.py
(+118 files in other folders)
