[project]
name = "smaug"
version = "0.1.0"
description = "Ingestão fiel e auditável dos dados fundamentais da carteira (brapi) — Fase 1."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "beanie>=1.29",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "typer>=0.15",
    "pycvm>=0.4",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "ruff>=0.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smaug"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
# Typer relies on function calls (typer.Option(...)) in argument defaults.
"src/smaug/entrypoints/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

# pycvm ships no py.typed marker, so it has no type stubs.
[[tool.mypy.overrides]]
module = ["cvm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
